[package]
name = "atomic-pool"
version = "2.0.1"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
description = "Statically allocated pool providing a std-like Box."
repository = "https://github.com/embassy-rs/atomic-pool"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std", "concurrency", "memory-management"]
rust-version = "1.79.0"

[dependencies]
as-slice-01 = { package = "as-slice", version = "0.1.5" }
as-slice-02 = { package = "as-slice", version = "0.2.1" }
portable-atomic = { version = "1.10.0" }
stable_deref_trait = { version = "1.2.0", default-features = false }
